Added files via upload

--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -8,10 +8,13 @@
   <link href="style.css" rel="stylesheet">
 </head>
 <body>
-		<header>
-			<h1><a href="#article">Rodney Mullen</a></h1>
-			<p>The Godfather of Skateboarding</p>
-		</header>
+	<div class="background-fix"></div>
+	<header>
+		<h1>
+			<a href="#article">Rodney Mullen</a>
+		</h1>
+		<p>The Godfather of Skateboarding</p>
+	</header>
 	<div class="wrapper">
 		<article>
 			<a id="article"></a>
