Added link to tribute page project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
   <title>Howard</title>
 </head>
 <body>
-	<h1>Howard</h1>
-	<p>FreeCodeCamp projects:</p>
+	<h1>Howard's FreeCodeCamp Projects</h1>
+	<h2>Frontend:</h2>
+	<ul>
+		<li><a href="tribute-page/">Tribute Page</a></li>
+	</ul>
 </body>
 </html>
