--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<h1>Howard's FreeCodeCamp Projects</h1>
-	<h2>Frontend:</h2>
+	<h2>Front End:</h2>
 	<ul>
 		<li><a href="tribute-page/">Tribute Page</a></li>
 	</ul>
