--- a/other/w3-asn3/index.html
+++ b/other/w3-asn3/index.html
@@ -13,7 +13,7 @@
     <h1>Canal View B&B</h1>
   </header>
   <nav role="navigation">
-    <h2>Menu</h2>
+    <h2><a href="#menu">Menu</a></h2>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="rooms.html">Rooms</a></li>
