Added files via upload

--- a/tribute-page/index.html
+++ b/tribute-page/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Rodney Mullen</title>
   <meta name="description" content="A tribute page to Rodney Mullen created for freecodecamp.">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="style.css" rel="stylesheet">
+  <link href="stylemin.css" rel="stylesheet">
 </head>
 <body>
 	<div class="background-fix"></div>
@@ -18,7 +18,7 @@
 	<div class="wrapper">
 		<article>
 			<a id="article"></a>
-			<h1>Bio</h1>
+			<h2>Bio</h2>
 			<p>
 				Rodney Mullen started skateboarding at the age of 10 in 1977. He quickly became obsessed with the sport and would practice for hours every day. At the time, his garage was the only place he could skate, so he developed skills in freestyle skateboarding, which could be performed on flat ground.
 				After only a year of owning a skateboard, he began to compete in freestyle competitions. 
@@ -30,11 +30,9 @@
 				Mullen entered the Oasis Pro competition in 1980, and defeated the world champion, Steve Rocco. He then turned professional as a member of the Bones Brigade team, sponsored by Powell Peralta. By 1990, Rodney Mullen had won thirty-four out of thirty-five freestyle competitions that he had entered, and to this day he has been successful in the skateboarding sport and industry. 
 			</p>
 		</article>
-
-
 			<figure>
 				<img 
-				sizes="15em, (max-width: 38em) 66vw, (max-width: 50em) 40vw,"
+				sizes="(max-width: 38em) 66vw, (max-width: 50em) 40vw, 17em"
 				srcset="img-194.jpg 194w, img-388.jpg 388w, img-583.jpg 583w, img-777.jpg 777w, img-971.jpg 971w"
 				src="img-388.jpg" 
 				alt="Rodney Mullen Handstand">
