Added files via upload

--- a/bs/index.html
+++ b/bs/index.html
@@ -68,33 +68,33 @@
 			<section class="foot-guides">
 				<h3>Beginner's Guides</h3>
 				<ul>
-					<li><a href="http://127.0.0.1:8000/beginners">Music Production</a></li>
-					<li><a href="http://127.0.0.1:8000/composition">Composition</a></li>
-					<li><a href="http://127.0.0.1:8000/mixing">Mixing</a></li>
-					<li><a href="http://127.0.0.1:8000/sound-design" title="coming soon">Sound Design</a></li>
-					<li><a href="http://127.0.0.1:8000/mastering">Mastering</a></li>
+					<li><a href="#beginners">Music Production</a></li>
+					<li><a href="#composition">Composition</a></li>
+					<li><a href="#mixing">Mixing</a></li>
+					<li><a href="#sound-design" title="coming soon">Sound Design</a></li>
+					<li><a href="#mastering">Mastering</a></li>
 				</ul>
 			</section>
 			<section class="foot-resources">
 				<h3>Resources</h3>
 				<ul>
-					<li><a href="http://127.0.0.1:8000/download">Downloads</a></li>
-					<li><a href="http://127.0.0.1:8000/lessons">Lessons</a></li>
-					<li><a href="http://127.0.0.1:8000/glossary">Glossary</a></li>
-					<li><a href="http://127.0.0.1:8000/blog">Blog</a></li>
-					<li><a href="http://127.0.0.1:8000/resources">See All</a></li>
+					<li><a href="#download">Downloads</a></li>
+					<li><a href="#lessons">Lessons</a></li>
+					<li><a href="#glossary">Glossary</a></li>
+					<li><a href="#blog">Blog</a></li>
+					<li><a href="#resources">See All</a></li>
 				</ul>
 			</section>
 			<section class="foot-about">
 				<h3>Beat School</h3>
 				<ul>
-					<li><a href="http://127.0.0.1:8000/about">About</a></li>
-					<li><a href="http://127.0.0.1:8000/search">Search</a></li>
-					<li><a href="http://127.0.0.1:8000/contact">Contact</a></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#search">Search</a></li>
+					<li><a href="#contact">Contact</a></li>
 					
 					<li><a>Sign up</a></li>
 					
-					<li><a href="http://127.0.0.1:8000/">Privacy</a></li>
+					<li><a href="#">Privacy</a></li>
 				</ul>
 			</section>
 			<section class="foot-follow">
