--- a/quote-machine/index.html
+++ b/quote-machine/index.html
@@ -11,10 +11,11 @@
 <body>
 	<div id="wrapper">
 		<header>
-			<a href="#" class="button" id="new-quote"><i class="fa fa-refresh"></i><span class="button-text">NewQuote</span></a><a href="#" class="button" id="tweet"><i class="fa fa-twitter"></i><span class="button-text">Tweet</span></a>
+			<h1>YouTube Comment Generator</h1>
+			<a href="#" class="button" id="new-quote"><i class="fa fa-refresh"></i><span class="button-text">New</span></a><a href="#" class="button" id="tweet"><i class="fa fa-twitter"></i><span class="button-text">Tweet</span></a>
 		</header>
 		<article>
-			<p id="quote">Test quote. Blah bloody ble if a blah blah blahhhh.</p>
+			<p id="quote">Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started!</p>
 		</article>
 		<footer>
 			<small><a href="http://www.howardcshaw.com">Howard Shaw</a></small>
