--- a/quote-machine/index.html
+++ b/quote-machine/index.html
@@ -15,7 +15,7 @@
 			<a href="#" class="button" id="new-quote"><i class="fa fa-refresh"></i><span class="button-text">New</span></a><a href="#" class="button" id="tweet"><i class="fa fa-twitter"></i><span class="button-text">Tweet</span></a>
 		</header>
 		<article>
-			<p id="quote">Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started!</p>
+			<p id="quote">Read a random comment from YouTube. Click the "New" button to get started!</p>
 		</article>
 		<footer>
 			<small><a href="http://www.howardcshaw.com">Howard Shaw</a></small>
