--- a/quote-machine/index.html
+++ b/quote-machine/index.html
@@ -5,8 +5,10 @@
 	<meta name="description" content="Generate a random sentence.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet">
-	<script src="https://use.fontawesome.com/10516cba86.js"></script>
+	<!--<script src="https://use.fontawesome.com/10516cba86.js"></script>-->
 	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+	<script src="quote.js"></script>
 </head>
 <body>
 	<div id="wrapper">
@@ -15,7 +17,7 @@
 			<a href="#" class="button" id="new-quote"><i class="fa fa-refresh"></i><span class="button-text">New</span></a><a href="#" class="button" id="tweet"><i class="fa fa-twitter"></i><span class="button-text">Tweet</span></a>
 		</header>
 		<article>
-			<p id="quote">Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started!</p>
+			<p id="quote">Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started! Read a random comment from YouTube. Click the "New" button to get started!</p>
 		</article>
 		<footer>
 			<small><a href="http://www.howardcshaw.com">Howard Shaw</a></small>
