--- a/quote-machine/index.html
+++ b/quote-machine/index.html
@@ -12,7 +12,7 @@
 	<div id="wrapper">
 		<header>
 			<h1>YouTube Comment Generator</h1>
-			<a href="#" class="button" id="new-quote"><i class="fa fa-refresh"></i><span class="button-text">New</span></a><a href="https://twitter.com/intent/tweet" class="button" id="tweet"><i class="fa fa-twitter"></i><span class="button-text">Tweet</span></a>
+			<a href="#" class="button" id="new-quote"><i class="fa fa-refresh"></i><span class="button-text">New</span></a><a href="https://twitter.com/intent/tweet" class="button" id="tweet" target="_blank"><i class="fa fa-twitter"></i><span class="button-text">Tweet</span></a>
 		</header>
 		<article>
 			<p id="quote">Read random comments from YouTube. Click the "New" button to get started!</p>
