--- a/index.html
+++ b/index.html
@@ -1,14 +1,43 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Howard</title>
+	<meta charset="utf8">
+	<title>Howard Shaw Portfolio</title>
+	<meta name="description" content="Web developer portfolio for Howard Shaw.">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="style.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
-	<h1>Howard's FreeCodeCamp Projects</h1>
-	<h2>Front End:</h2>
-	<ul>
-		<li><a href="tribute-page/">Tribute Page</a></li>
-	</ul>
+	<div id="paralax">
+		<canvas></canvas>
+	</div>
+	<header id="home">
+		<h1><a href="#home">Howard Shaw</a></h1>
+		<nav>
+			<a href="#" id="mobile-menu"><i class="fa fa-bars"></i><span>Menu</span></a>
+			<ul>
+				<li><a href="#about">About</a></li>
+				<li><a href="#portfolio">Portfolio</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+	</header>
+	<section id="about">
+		<article>
+			<h2>About Me</h2>
+			<img
+			src=""
+			alt="A picture of me"
+			>
+			<p>blah blah</p>
+		</article>
+	</section>
+	<section id="portfolio">
+		<h2>Portfolio</h2>
+	</section>
+	<section id="contact">
+		<h2>Contact Me</h2>
+	</section>
 </body>
 </html>
