--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="description" content="Web developer portfolio for Howard Shaw.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet">
-	<link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 	<div id="paralax">
@@ -15,7 +14,7 @@
 	<header id="home">
 		<h1><a href="#home">Howard Shaw</a></h1>
 		<nav>
-			<a href="#" id="mobile-menu"><i class="fa fa-bars"></i><span>Menu</span></a>
+			<a href="#" id="mobile-menu"><span></span><span>Menu</span><span></span></a>
 			<ul>
 				<li><a href="#about">About</a></li>
 				<li><a href="#portfolio">Portfolio</a></li>
