--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
 	<meta name="description" content="Web developer portfolio for Howard Shaw.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet">
+	<link href='https://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div id="paralax">
-		<canvas></canvas>
+	<div id="parallax-front">
+	</div>
+	<div id="parallax-front-mid">
+	</div>
+	<div id="parallax-back-mid">
+	</div>
+	<div id="parallax">
 	</div>
 	<header id="home">
 		<h1><a href="#home">Howard Shaw</a></h1>
 		<nav>
 			<a href="#" id="mobile-menu"><span></span><span>Menu</span><span></span></a>
-			<ul>
-				<li><a href="#about">About</a></li>
-				<li><a href="#portfolio">Portfolio</a></li>
-				<li><a href="#contact">Contact</a></li>
+			<ul><li><a href="#about">About</a></li><li><a href="#portfolio">Portfolio</a></li><li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -29,7 +32,7 @@
 			src=""
 			alt="A picture of me"
 			>
-			<p>blah blah</p>
+			<p>Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. </p>
 		</article>
 	</section>
 	<section id="portfolio">
@@ -38,5 +41,7 @@
 	<section id="contact">
 		<h2>Contact Me</h2>
 	</section>
+	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+	<script src="portfolio.js"></script>
 </body>
 </html>
