--- a/index.html
+++ b/index.html
@@ -37,6 +37,13 @@
 	</section>
 	<section id="portfolio">
 		<h2>Portfolio</h2>
+		<a href="#">
+			<div class="project">
+				Beat School
+				<div class="project-foreground"></div>
+				<div class="project-background"></div>
+			</div>
+		</a>
 	</section>
 	<section id="contact">
 		<h2>Contact Me</h2>
