--- a/index.html
+++ b/index.html
@@ -9,46 +9,92 @@
 	<link href='https://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
 </head>
 <body>
-	<div id="parallax-front">
+	<div id="scene">
+		<div id="parallax-front" class="parallax layer" data-depth="0.25">
+		</div>
+		<div id="parallax-front-mid" class="parallax layer" data-depth="0.125">
+		</div>
+		<div id="parallax-back-mid" class="parallax layer" data-depth="0.0625">
+		</div>
+		<div id="parallax" class="parallax layer" data-depth="0.03125">
+		</div>
 	</div>
-	<div id="parallax-front-mid">
-	</div>
-	<div id="parallax-back-mid">
-	</div>
-	<div id="parallax">
-	</div>
-	<header id="home">
-		<h1><a href="#home">Howard Shaw</a></h1>
-		<nav>
-			<a href="#" id="mobile-menu"><span></span><span>Menu</span><span></span></a>
-			<ul><li><a href="#about">About</a></li><li><a href="#portfolio">Portfolio</a></li><li><a href="#contact">Contact</a></li>
-			</ul>
-		</nav>
+	<div id="shade"></div>
+	<div class="portpic" id="pp-one"></div>
+	<div class="portpic" id="pp-two"></div>
+	<div class="portpic" id="pp-three"></div>
+	<div class="portpic" id="pp-four"></div>
+	<div class="portpic" id="pp-five"></div>
+	<div class="portpic" id="pp-six"></div>
+	<nav>
+		<a href="#" id="mobile-menu"><span></span><span>Menu</span><span></span></a>
+		<ul><li class="left-nav"><a href="#home">Howard Shaw</a><li><a href="#about">About</a></li><li><a href="#portfolio">Portfolio</a></li><li><a href="#contact">Contact</a></li>
+		</ul>
+	</nav>
+	<header id="home" class="vp-box">
+		<div>
+			<h1>Howard Shaw</h1>
+			<p>Developer Portfolio</p>
+		</div>
 	</header>
-	<section id="about">
-		<article>
+	<section id="about" class="vp-box">
+		<article class="wrap about-wrap">
 			<h2>About Me</h2>
 			<img
-			src=""
+			src="me.png"
 			alt="A picture of me"
 			>
 			<p>Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. </p>
 		</article>
 	</section>
-	<section id="portfolio">
-		<h2>Portfolio</h2>
-		<a href="#">
-			<div class="project">
-				Beat School
-				<div class="project-foreground"></div>
-				<div class="project-background"></div>
-			</div>
-		</a>
+	<section id="portfolio" class="vp-box">
+		<div class="wrap port-wrap">
+			<h2>Portfolio</h2>
+			<a href="#" id="pa-one">
+				<div class="project">
+					Beat School
+					<div class="project-foreground"></div>
+				</div>
+			</a><!--
+			--><a href="#" id="pa-two">
+				<div class="project">
+					Beat School
+					<div class="project-foreground"></div>
+				</div>
+			</a><!--
+			--><a href="#" id="pa-three">
+				<div class="project">
+					Beat School
+					<div class="project-foreground"></div>
+				</div>
+			</a><!--
+			--><a href="#" id="pa-four">
+				<div class="project">
+					Beat School
+					<div class="project-foreground"></div>
+				</div>
+			</a><!--
+			--><a href="#" id="pa-five">
+				<div class="project">
+					Beat School
+					<div class="project-foreground"></div>
+				</div>
+			</a><!--
+			--><a href="#" id="pa-six">
+				<div class="project">
+					Beat School
+					<div class="project-foreground"></div>
+				</div>
+			</a>
+		</div>
 	</section>
-	<section id="contact">
-		<h2>Contact Me</h2>
+	<section id="contact" class="vp-box">
+		<div class="wrap contact-wrap">
+			<h2>Contact Me</h2>
+		</div>
 	</section>
 	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
+	<script src="parallax.min.js"></script>
 	<script src="portfolio.js"></script>
 </body>
 </html>
