--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
+	<noscript><style type="text/css">
+		#overlay, #scene{ display: none;}
+	</style></noscript>
 </head>
 <body>
 	<div id="scene">
@@ -26,6 +29,9 @@
 	<div class="portpic" id="pp-four"></div>
 	<div class="portpic" id="pp-five"></div>
 	<div class="portpic" id="pp-six"></div>
+	<div id="overlay">
+		<p>Loading...</p>
+	</div>
 	<nav>
 		<a href="#" id="mobile-menu"><span></span><span>Menu</span><span></span></a>
 		<ul><li class="left-nav"><a href="#home">Howard Shaw</a><li><a href="#about">About</a></li><li><a href="#portfolio">Portfolio</a></li><li><a href="#contact">Contact</a></li>
