--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div class="portpic" id="pp-five"></div>
 	<div class="portpic" id="pp-six"></div>
 	<div id="overlay">
-		<p>Loading...</p>
+		<div class="loader"></div>
 	</div>
 	<nav>
 		<a href="#" id="mobile-menu"><span></span><span>Menu</span><span></span></a>
