--- a/cipher/index.html
+++ b/cipher/index.html
@@ -29,6 +29,7 @@
 				<h2>About</h2>
 				<p>Type or paste text into the "Input" box and then click "Encrypt" to get your encoded message. You can then share this message, and only people who know about this webpage will be able to decode it. To decode a message, just paste the text into the "Input" box and then click "Decrypt".</p>
 				<p>This is only intended for entertainment, so the security of these messages is not guaranteed. UTF-8 characters 9, 10, 13, 32-126, and 161-163 are encoded, any other characters will be replaced with a space.</p>
+				<p>Page By: <a href="/" class="thanks">Howard Shaw</a></p>
 				<p>Thanks to: <a href="https://github.com/MikeMcl/bignumber.js/" class="thanks">BigNumber.js</a></p>
 				<a href="#" id="close" class="button">Close</a>
 			</div>
