--- a/index.html
+++ b/index.html
@@ -7,55 +7,40 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet">
 	<link href='https://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 	<noscript><style type="text/css">
 		#overlay, #scene{ display: none;}
 	</style></noscript>
 </head>
 <body>
-	<div id="scene">
-		<div id="parallax-front" class="parallax layer" data-depth="0.25">
-		</div>
-		<div id="parallax-front-mid" class="parallax layer" data-depth="0.125">
-		</div>
-		<div id="parallax-back-mid" class="parallax layer" data-depth="0.0625">
-		</div>
-		<div id="parallax" class="parallax layer" data-depth="0.03125">
-		</div>
-	</div>
-	<div id="shade"></div>
-	<div class="portpic" id="pp-one"></div>
-	<div class="portpic" id="pp-two"></div>
-	<div class="portpic" id="pp-three"></div>
-	<div class="portpic" id="pp-four"></div>
-	<div class="portpic" id="pp-five"></div>
-	<div class="portpic" id="pp-six"></div>
-	<div id="overlay">
-		<div class="loader"></div>
-	</div>
-	<nav>
-		<a href="#" id="mobile-menu"><span></span><span>Menu</span><span></span></a>
-		<ul><li class="left-nav"><a href="#home">Howard Shaw</a><li><a href="#about">About</a></li><li><a href="#portfolio">Portfolio</a></li><li><a href="#contact">Contact</a></li>
-		</ul>
-	</nav>
 	<header id="home" class="vp-box">
 		<div>
 			<h1>Howard Shaw</h1>
 			<p>Developer Portfolio</p>
 		</div>
 	</header>
+	<nav id="top-nav" class="home">
+		<div id="nav-wrap">
+			<h2>Menu</h2>
+			
+			<ul><li class="left-nav"><a href="#home">Howard Shaw</a></li><li><a href="#about">About</a></li><li><a href="#projects">Projects</a></li><li><a href="#contact">Contact</a></li>
+			</ul>
+		</div>
+		<a href="#" id="mobile-menu"><span class="span-top"></span><span class="span-middle"></span><span class="span-bottom"></span></a>
+	</nav>
 	<section id="about" class="vp-box">
-		<article class="wrap about-wrap">
+		<div>
 			<h2>About Me</h2>
 			<img
 			src="me.png"
 			alt="A picture of me"
 			>
-			<p>Grumpy wizards make toxic brew for the evil Queen and Jack. One morning, when Gregor Samsa woke from troubled dreams, he found himself transformed in his bed into a horrible vermin. He lay on his armour-like back, and if he lifted his head a little he could see his brown belly, slightly domed and divided by arches into stiff sections. </p>
-		</article>
+			<p>Hi! I'm Howard, a front end developer and electronic music producer. So far, my experience in development primarily consists of responsive design using HTML5, CSS3 and some jQuery. Because of my interest in music, I've also built some applications using the Web Audio API, Canvas, and JavaScript.</p>
+		</div>
 	</section>
-	<section id="portfolio" class="vp-box">
-		<div class="wrap port-wrap">
-			<h2>Portfolio</h2>
+	<section id="projects" class="vp-box">
+		<div>
+			<h2>Projects</h2>
 			<a href="#" id="pa-one">
 				<div class="project">
 					Beat School
@@ -95,12 +80,11 @@
 		</div>
 	</section>
 	<section id="contact" class="vp-box">
-		<div class="wrap contact-wrap">
+		<div>
 			<h2>Contact Me</h2>
 		</div>
 	</section>
-	<script   src="https://code.jquery.com/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
-	<script src="parallax.min.js"></script>
+	<script src="../js/jquery-2.2.3.min.js"></script>
 	<script src="portfolio.js"></script>
 </body>
 </html>
