--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id="nav-wrap">
 			<h2>Menu</h2>
 			
-			<ul><li class="left-nav"><a href="#home" class="nav-link">Howard Shaw</a></li><li><a href="#about" class="nav-link">About</a></li><li><a href="#projects" class="nav-link">Projects</a></li><li><a href="#contact" class="nav-link">Contact</a></li>
+			<ul><li class="left-nav"><a href="#home" class="nav-link">Howard</a></li><li><a href="#about" class="nav-link">About</a></li><li><a href="#projects" class="nav-link">Projects</a></li><li><a href="#contact" class="nav-link">Contact</a></li>
 			</ul>
 		</div>
 		<a href="#" id="mobile-menu"><span class="span-top"></span><span class="span-middle"></span><span class="span-bottom"></span></a>
