--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header id="home" class="vp-box">
-		<div>
+		<div class="content-wrap">
 			<h1>Howard Shaw</h1>
 			<p>Developer Portfolio</p>
 		</div>
@@ -29,7 +29,7 @@
 		<a href="#" id="mobile-menu"><span class="span-top"></span><span class="span-middle"></span><span class="span-bottom"></span></a>
 	</nav>
 	<section id="about" class="vp-box">
-		<div>
+		<div class="content-wrap">
 			<h2>About Me</h2>
 			<img
 			src="me.png"
@@ -39,48 +39,54 @@
 		</div>
 	</section>
 	<section id="projects" class="vp-box">
-		<div>
+		<div class="content-wrap">
 			<h2>Projects</h2>
 			<a href="#" id="pa-one">
 				<div class="project">
-					Beat School
-					<div class="project-foreground"></div>
+					<div class="project-background">
+						<!--beatschool.io-->
+					</div>
+					<span>Full Stack</span>
 				</div>
 			</a><!--
 			--><a href="#" id="pa-two">
 				<div class="project">
-					Beat School
-					<div class="project-foreground"></div>
+					<div class="project-background">
+						<!--ear training-->
+					</div>
+					<span>Web Audio</span>
 				</div>
 			</a><!--
 			--><a href="#" id="pa-three">
 				<div class="project">
-					Beat School
-					<div class="project-foreground"></div>
+					<div class="project-background">
+						<!--interactive tut-->
+					</div>
+					<span>HTML5 Media</span>
 				</div>
 			</a><!--
 			--><a href="#" id="pa-four">
 				<div class="project">
-					Beat School
-					<div class="project-foreground"></div>
+					<div class="project-background"></div>
+					<span>Responsive Design</span>
 				</div>
 			</a><!--
 			--><a href="#" id="pa-five">
 				<div class="project">
-					Beat School
-					<div class="project-foreground"></div>
+					<div class="project-background"></div>
+					<span>??</span>
 				</div>
 			</a><!--
 			--><a href="#" id="pa-six">
 				<div class="project">
-					Beat School
-					<div class="project-foreground"></div>
+					<div class="project-background"></div>
+					<span>Code Sample</span>
 				</div>
 			</a>
 		</div>
 	</section>
 	<section id="contact" class="vp-box">
-		<div>
+		<div class="content-wrap">
 			<h2>Contact Me</h2>
 		</div>
 	</section>
