--- a/index.html
+++ b/index.html
@@ -98,9 +98,10 @@
 				<textarea id="message" required placeholder="What's up?"></textarea>
 				<button type="submit">Send</button>
 			</form>
-			or
-			send an email to
-			<a href="mailto:me@howardcshaw.com">me@howardcshaw.com</a>
+			<p>
+				or send an email to <a href="mailto:me@howardcshaw.com">me@howardcshaw.com</a>
+			</p>
+			
 		</div>
 	</section>
 	<script src="../js/jquery-2.2.3.min.js"></script>
