--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Web developer portfolio for Howard Shaw.">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href="style.css" rel="stylesheet">
-	<link href='https://fonts.googleapis.com/css?family=Sintony' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Sintony:400,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
 	<noscript><style type="text/css">
 		#overlay, #scene{ display: none;}
@@ -38,7 +38,7 @@
 				>
 				<div class="img-overlay"></div>
 			</div>
-			<p>Hi! I'm Howard, a front end developer and electronic music producer. So far, my experience in development primarily consists of responsive design using HTML5, CSS3 and some jQuery. Because of my interest in music, I've also built some applications using the Web Audio API, Canvas, and JavaScript.</p>
+			<p>Hi! I'm Howard, a front-end developer and electronic music producer. So far, my experience in development primarily consists of responsive design using HTML5, CSS3 and some jQuery. Because of my interest in music, I've also built some applications using the Web Audio API, Canvas, and JavaScript. I've also built a website using Django for the back end. You can find this in my portfolio labeled as "Full Stack."</p>
 		</div>
 	</section>
 	<section id="projects" class="vp-box">
