--- a/index.html
+++ b/index.html
@@ -31,61 +31,53 @@
 	<section id="about" class="vp-box">
 		<div class="content-wrap">
 			<h2>About Me</h2>
-			<div class="img-wrap">
-				<img
-				src="me.png"
-				alt="A picture of me"
-				>
-				<div class="img-overlay"></div>
+			<div class="about-container">
+				<div class="img-wrap">
+					<img
+					src="me.png"
+					alt="A picture of me"
+					>
+					<div class="img-overlay"></div>
+				</div>
+				<p>Hi! I'm Howard, a front-end developer and electronic music producer. So far, my experience in development primarily consists of responsive design using HTML5, CSS3 and some jQuery. Because of my interest in music, I've also built some applications using the Web Audio API, Canvas, and JavaScript. I've also built a website using Django for the back end. You can find this in my portfolio labeled as "Full Stack."</p>
 			</div>
-			<p>Hi! I'm Howard, a front-end developer and electronic music producer. So far, my experience in development primarily consists of responsive design using HTML5, CSS3 and some jQuery. Because of my interest in music, I've also built some applications using the Web Audio API, Canvas, and JavaScript. I've also built a website using Django for the back end. You can find this in my portfolio labeled as "Full Stack."</p>
 		</div>
 	</section>
 	<section id="projects" class="vp-box">
 		<div class="content-wrap">
 			<h2>Projects</h2>
-			<a href="#" id="pa-one">
-				<div class="project">
-					<div class="project-background">
-						<!--beatschool.io-->
-					</div>
-					<span>Full Stack</span>
-				</div>
-			</a><!--
-			--><a href="#" id="pa-two">
-				<div class="project">
-					<div class="project-background">
-						<!--ear training-->
-					</div>
-					<span>Web Audio</span>
-				</div>
-			</a><!--
-			--><a href="#" id="pa-three">
-				<div class="project">
-					<div class="project-background">
-						<!--interactive tut-->
-					</div>
-					<span>HTML5 Media</span>
-				</div>
-			</a><!--
-			--><a href="#" id="pa-four">
-				<div class="project">
-					<div class="project-background"></div>
-					<span>Responsive Design</span>
-				</div>
-			</a><!--
-			--><a href="#" id="pa-five">
-				<div class="project">
-					<div class="project-background"></div>
-					<span>??</span>
-				</div>
-			</a><!--
-			--><a href="#" id="pa-six">
-				<div class="project">
-					<div class="project-background"></div>
-					<span>Code Sample</span>
-				</div>
-			</a>
+			<div class="projects-container">
+				<a href="#" id="pa-one"  class="project">
+						<div class="project-background">
+							<!--beatschool.io-->
+						</div>
+						<span>Full Stack</span>
+				</a><!--
+				--><a href="#" id="pa-two" class="project">
+						<div class="project-background">
+							<!--ear training-->
+						</div>
+						<span>Web Audio</span>
+				</a><!--
+				--><a href="#" id="pa-three" class="project">
+						<div class="project-background">
+							<!--interactive tut-->
+						</div>
+						<span>HTML5 Media</span>
+				</a><!--
+				--><a href="#" id="pa-four" class="project">
+						<div class="project-background"></div>
+						<span>Responsive Design</span>
+				</a><!--
+				--><a href="#" id="pa-five" class="project">
+						<div class="project-background"></div>
+						<span>??</span>
+				</a><!--
+				--><a href="#" id="pa-six" class="project">
+						<div class="project-background"></div>
+						<span>Code Sample</span>
+				</a>
+			</div>
 		</div>
 	</section>
 	<section id="contact" class="vp-box">
