--- a/index.html
+++ b/index.html
@@ -11,15 +11,17 @@
 
 </head>
 <body>
-	<header id="home" class="vp-box">
+	<header id="home" class="vp-box" tabindex="0">
 		<canvas id="canvas-hidden"></canvas>
+		<canvas id="canvas-copy"></canvas>
+		<img id="img-hidden" >
 		<canvas id="canvas-home"></canvas>
 		<div class="content-wrap">
 			<h1>Howard Shaw</h1>
 			<p>Developer Portfolio</p>
 		</div>
 	</header>
-	<section id="about" class="vp-box">
+	<section id="about" class="vp-box" tabindex="0">
 		<div class="content-wrap">
 			<h2>About Me</h2>
 			<div class="about-container">
@@ -34,7 +36,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="projects" class="vp-box">
+	<section id="projects" class="vp-box" tabindex="0">
 		<div class="content-wrap">
 			<h2>Projects</h2>
 			<div class="projects-container">
@@ -77,7 +79,7 @@
 			</div>
 		</div>
 	</section>
-	<section id="contact" class="vp-box">
+	<section id="contact" class="vp-box" tabindex="0">
 		<div class="content-wrap">
 			<h2>Contact Me</h2>
 			<form id="contact-form">
@@ -100,7 +102,7 @@
 			<ul><li class="left-nav"><a href="#home" class="nav-link">Howard</a></li><li><a href="#about" class="nav-link">About</a></li><li><a href="#projects" class="nav-link">Projects</a></li><li><a href="#contact" class="nav-link">Contact</a></li>
 			</ul>
 		</div>
-		<a href="#" id="mobile-menu"><span class="span-top"></span><span class="span-middle"></span><span class="span-bottom"></span></a>
+		<a href="#" id="mobile-menu" tabindex="1"><span class="span-top"></span><span class="span-middle"></span><span class="span-bottom"></span></a>
 	</nav>
 	<script src="../js/jquery-2.2.3.min.js"></script>
 	<script src="portfolio.js"></script>
