--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="content-wrap">
 			<h2>Projects</h2>
 			<div class="projects-container">
-				<a href="#" id="pa-one"  class="project">
+				<a href="https://www.beatschool.io" id="pa-beatschool"  class="project">
 						<div class="project-background">
 							<!--beatschool.io-->
 						</div>
@@ -61,7 +61,7 @@
 						<div class="project-overlay"></div>
 						<span>HTML5 Media</span>
 				</a><!--
-				--><a href="#" id="pa-four" class="project">
+				--><a href="tribute-page/" id="pa-tribute" class="project">
 						<div class="project-background"></div>
 						<div class="project-overlay"></div>
 						<span>Responsive Design</span>
@@ -71,10 +71,10 @@
 						<div class="project-overlay"></div>
 						<span>??</span>
 				</a><!--
-				--><a href="#" id="pa-six" class="project">
+				--><a href="cipher/" id="pa-cipher" class="project">
 						<div class="project-background"></div>
 						<div class="project-overlay"></div>
-						<span>Code Sample</span>
+						<span>Text Cipher</span>
 				</a>
 			</div>
 		</div>
