--- a/wa-resources/index.html
+++ b/wa-resources/index.html
@@ -46,81 +46,19 @@
 	 			<a href="#settings-parameters" class="menu-item shown">Parameters</a><!--
 	 		 --><a href="#settings-audio" class="menu-item">Audio</a><!--
 	 		 --><a href="#settings-about" class="menu-item">About</a>
-	 			<div class="top-right"><button id="close-btn"><span>close</span></button></div>
+	 			<div class="top-right"><button id="eq-close-settings"><span>close</span></button></div>
 	 		</div>
 	 		<div id="settings-parameters" class="shown settings-container">
 	 			<!--<input type="text" name="DEMOmin1max50" pattern="^[1-9]$|^[1-4][0-9]$|^50$">-->
 	 			<h3>Select Preset</h3>
-	 			<select id="settings-presets"><!--
-	 				<option value="op1val">op1</option>
-	 				<option value="op2val">op2</option>
-	 				<option value="op3val">op3</option>-->
+	 			<select id="eq-presets">
 	 			</select>
-	 			<button id="load-settings-preset">Load Preset</button>
+	 			<button id="eq-load-preset">Load Preset</button>
 
 	 			<h3>Customize Preset</h3>
 
-	 			<form id="settings-form">
-	 			<table>
-	 				<tr>
-	 					<th>Parameter</th>
-	 					<th>Steps</th>
-	 					<th>Mode</th>
-	 					<th>Min</th>
-	 					<th>Max</th>
-	 				</tr>
-	 				<tr>
-	 					<td>Filter Type</td>
-	 					<td class="null"></td>
-	 					<td>
-	 						<select id="filter-mode">
-	 							<option value="test">Test</option>
-	 							<option value="user">User</option>
-	 							<option value="reference">Reference</option>
-	 						</select>
-	 					</td>
-	 					<td class="null"></td>
-	 					<td class="null"></td>
-	 				</tr>
-	 				<tr>
-	 					<td>Gain</td>
-	 					<td><input id="level-steps" type="number" min="1" max="50" required></td>
-	 					<td>
-	 						<select id="level-mode">
-	 							<option value="test">Test</option>
-	 							<option value="user">User</option>
-	 							<option value="reference">Reference</option>
-	 						</select>
-	 					</td>
-	 					<td><input id="level-min" type="number" min="0" max="10" required></td>
-	 					<td><input id="level-max" type="number" min="0" max="10" required></td>
-	 				</tr>
-	 				<tr>
-	 					<td>Frequency</td>
-	 					<td><input id="frequency-steps" type="number" min="1" max="50" required></td>
-	 					<td>
-	 						<select id="frequency-mode">
-	 							<option value="test">Test</option>
-	 							<option value="user">User</option>
-	 							<option value="reference">Reference</option>
-	 						</select>
-	 					</td>
-	 					<td><input id="frequency-min" type="number" min="0" max="10" required></td>
-	 					<td><input id="frequency-max" type="number" min="0" max="10" required></td>
-	 				</tr>
-	 				<tr>
-	 					<td>BandWidth (Q)</td>
-	 					<td><input id="bandwidth-steps" type="number" min="1" max="50" required></td>
-	 					<td>
-	 						<select id="bandwidth-mode">
-	 							<option value="test">Test</option>
-	 							<option value="user">User</option>
-	 							<option value="reference">Reference</option>
-	 						</select>
-	 					</td>
-	 					<td><input id="bandwidth-min" type="number" min="0" max="10" required></td>
-	 					<td><input id="bandwidth-max" type="number" min="0" max="10" required></td>
-	 				</tr>
+	 			<form id="eq-preset-form">
+	 			<table id="eq-preset-table">
 	 			</table>
 
 		 		<button id="settings-save" type="submit">Apply Changes</button>
@@ -128,23 +66,26 @@
 	 		</div>
 	 		<div id="settings-audio" class="settings-container">
 	 			<h3>Select Audio</h3>
-	 			<select id="settings-audiofiles">
+	 			<select id="track0-audio-files">
 	 			</select>
-	 			<button id="load-settings-audiofiles">Load Audio</button>
+	 			<button id="track0-load-included-audio">Load Audio</button>
 	 			<h3>Custom Audio</h3>
-	 			<label for="audio-file" id="drag-drop">
-	 				<span id="drag-drop-text"><b>Drag and Drop</b> or <b>Click</b> to select custom <i>.wav</i> or <i>.mp3</i> audio file</span>
+	 			<label for="track0-audio-file" id="track0-drag-drop">
+	 				<span id="track0-dd-text"><b>Drag and Drop</b> or <b>Click</b> to select a custom <i>.wav</i> or <i>.mp3</i> audio file</span>
 	 			</label>
 	 			<div id="audio-file-wrap">
-	 				<input type="file" id="audio-file" required accept="audio/mpeg,	audio/wav">
+	 				<input type="file" id="track0-audio-file" required accept="audio/mpeg,	audio/wav">
 	 			</div>
- 				<button id="load-custom-audio" type="submit">Load Custom Audio</button>
+ 				<button id="track0-load-custom-audio" type="submit">Load Custom Audio</button>
 	 			
 	 		</div>
 	 		<div id="settings-about" class="settings-container">
 	 			<h2>About</h2>
 	 		</div>
 	 	</div>
+		<div id='eq-loading-overlay'>
+			<p>Loading...</p>
+		</div>
 	</div>
 	<script src="../js/jquery-2.2.3.min.js"></script>
 	<script src="wa_resources.js"></script>
